changes in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
 <!--
 
-Tooplate 2127 Little Fashion
+Tooplate 2127 Little Fashion 
 
 https://www.tooplate.com/view/2127-little-fashion
 
@@ -48,7 +48,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>karthik</span> reddy</strong>
                     </a>
 
                     <div class="d-lg-none">
