--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>PRASANNA</span> JUMBOO</strong>
+                        <strong><span>Karthik</span> reddy</strong>
                     </a>
 
                     <div class="d-lg-none">
