--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">abhi</h1>
+                                    <h1 class="slick-title">Reddy</h1>
 
                                     <p class="lead text-white mt-lg-3 mb-lg-5">Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
 
